examples/k8s/4-canary/ingress_controller/1-stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
  labels:
    app: myapp
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
      - name: myapp
        image: ghcr.io/koumi15cancer/deployment_demo/backend-v1:latest
        ports:
        - containerPort: 8080
