examples/k8s/4-canary/ingress_controller/2-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2
  labels:
    app: myapp
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
      - name: myapp
        image: ghcr.io/koumi15cancer/deployment_demo/backend-v2:latest
        ports:
        - containerPort: 8080
