examples/k8s/4-canary/ingress_controller/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
    - name: http
      protocol: TCP
      port: 8181
      targetPort: 8080
  type: ClusterIP
